--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,6 +1,6 @@
 .rootModal {
   position: fixed;
-  background-color: rgba(30, 30, 30, 1);
+  /* background-color: rgba(30, 30, 30, 1); */
   width: 100vh;
   height: 100vw;
 }
